# volk-boxmuller

./: CMakeLists.txt  README  README.md  volk_boxmuller.pc.in
apps/: CMakeLists.txt  volk_boxmuller-config-info.cc  volk_boxmuller_profile.cc  volk_boxmuller_profile.h
cmake/Modules/: VolkConfig.cmake
docs/: extending_volk_boxmuller.dox  kernels.dox  terms_and_techniques.dox  using_volk_boxmuller.dox
include/volk_boxmuller/: constants.h  volk_boxmuller_common.h  volk_boxmuller_complex.h  volk_boxmuller_malloc.h  volk_boxmuller_prefs.h
kernels/: README.txt
kernels/volk_boxmuller/: volk_boxmuller_32f_boxmuller_32f.h  volk_boxmuller_32f_boxmullerpuppet_32f.h  volk_boxmuller_32f_cos_32f.h  volk_boxmuller_32f_log2_32f.h  volk_boxmuller_32f_sin_32f.h  volk_boxmuller_32f_sqrt_32f.h  volk_boxmuller_32f_x2_multiply_32f.h
kernels/volk_boxmuller/asm/orc/: volk_boxmuller_32f_sqrt_32f_a_orc_impl.orc  volk_boxmuller_32f_x2_multiply_32f_a_orc_impl.orc
lib/: .kernel_tests.h.swp  CMakeLists.txt  constants.c.in  kernel_tests.h  qa_utils.cc  qa_utils.h  testqa.cc  volk_boxmuller_malloc.c  volk_boxmuller_prefs.c  volk_boxmuller_rank_archs.c  volk_boxmuller_rank_archs.h
python/volk_boxmuller_modtool/: CMakeLists.txt  README  __init__.py  cfg.py  volk_boxmuller_modtool  volk_boxmuller_modtool_generate.py
tmpl/: volk_boxmuller.tmpl.c  volk_boxmuller.tmpl.h  volk_boxmuller_cpu.tmpl.c  volk_boxmuller_cpu.tmpl.h  volk_boxmuller_machine_xxx.tmpl.c  volk_boxmuller_machines.tmpl.c  volk_boxmuller_machines.tmpl.h  volk_boxmuller_typedefs.tmpl.h
